[package]
authors = ["Joel S. Roxell <joel.roxell@elva-group.com>"]
edition = "2018"
readme = "README.md"
name = "digital-lev"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.7.0", features = ["ld", "rt", "stm32f303xc"] }

lsm303agr = "0.2.2"

# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# cortex-m = "0.7.2"
# cortex-m-rt = { version = "0.6.13", features = ["device"] }
# cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
# stm32f3xx-hal = { version = "0.9.1", features = ["ld", "rt", "stm32f303xc"] }
 
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "digital-lev"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

